syntax = "proto3";
package config;

option go_package = "github.com/erdichen/chromekey/remap/config";

import "evdev/keycode/keycode.proto";

message KeymapEntry {
    keycode.Code from = 1;
    keycode.Code to = 2;
}

message KeymapConfig {
    bool fn_enabled = 1;
    keycode.Code fn_key = 2;
    optional keycode.LED use_led = 3;
    // Reserved tags here for future non-repeating fields.
    repeated keycode.Code third_level_key = 19;         // FN+3rd_level+key
    repeated KeymapEntry key_map = 20;                  // FN locked
    repeated KeymapEntry mod_key_map = 21;              // FN+key
    repeated KeymapEntry third_level_key_map = 22;      // FN+3rd_level+key
}
